--- a/src/calendarcss/core.css
+++ b/src/calendarcss/core.css
@@ -265,7 +265,8 @@ temporary rendered events).
 
 .fc-event,
 .fc-event-dot {
-  background-color: #3788d8;
+  /* background-color: #3788d8; */
+  background-color: black;
   /* default BACKGROUND color */
 }
 
@@ -714,14 +715,18 @@ Lots taken from Flatly (MIT): https://bootswatch.com/4/flatly/bootstrap.css
 /* "primary" coloring */
 .fc-button-primary {
   color: #fff;
-  background-color: #4b7bec;
-  border-color: #4b7bec;
+  /* background-color: #4b7bec;
+  border-color: #4b7bec; */
+  background-color: black;
+  border-color: white;
 }
 
 .fc-button-primary:hover {
   color: #fff;
-  background-color: #4b7bec;
-  border-color: #4b7bec;
+  /* background-color: #4b7bec;
+  border-color: #4b7bec; */
+  background-color: black;
+  border-color: white;
 }
 
 /* .fc-button-primary:focus {
@@ -732,15 +737,19 @@ Lots taken from Flatly (MIT): https://bootswatch.com/4/flatly/bootstrap.css
 
 .fc-button-primary:disabled {
   color: #fff;
-  background-color: #4b7bec;
-  border-color: #4b7bec;
+  /* background-color: #4b7bec;
+  border-color: #4b7bec; */
+  background-color: black;
+  border-color: white;
 }
 
 .fc-button-primary:not(:disabled):active,
 .fc-button-primary:not(:disabled).fc-button-active {
   color: #fff;
-  background-color: #4b7bec;
-  border-color: #4b7bec;
+  /* background-color: #4b7bec;
+  border-color: #4b7bec; */
+  background-color: black;
+  border-color: white;
 }
 
 /* .fc-button-primary:not(:disabled):active:focus,
