mileage and very very many things

--- a/src/calendarcss/daygrid.css
+++ b/src/calendarcss/daygrid.css
@@ -79,6 +79,7 @@
 
 
 #calendar > div.fc-view-container > div > table > tbody > tr > td > div {
+  height:auto !important;
     min-height: 59vh !important;
 }
 
