--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,7 @@ button:focus {
 .MuiInput-underline:before {
   border-bottom: 0 !important;
 }
+
+.MuiInputBase-input {
+  color:black !important;
+}
