--- a/src/index.css
+++ b/src/index.css
@@ -54,10 +54,23 @@ label + .MuiInput-formControl {
   width: 223px;
 }
 
-.MuiInputBase-input {
-  opacity: 0;
-}
+
 
 .datepicker-container {
   position: relative;
+  align-items: center;
+}
+/* 
+#date-picker-dialog {
+  opacity: 0;
+} */
+
+.datepicker-container .MuiInputBase-input {
+  opacity: 0;
+}
+
+.MuiIconButton-label {
+  color:#3e98c7;
+  position: relative;
+  bottom:5px;
 }
